[package]
name = "ya-rcon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-net = {version = "2.0.0", optional = true}
futures = {version = "0.3.30", optional = true}
# tokio = {version = "1.38.1", features = ["net","io-util"], optional = true}

[features]
async-net = ["dep:futures", "dep:async-net"]
# tokio = ["dep:tokio"]

[dev-dependencies]
tokio = {version = "1.38.1", features = ["rt"]}
# tokio-test = "0.4.4"
tokio-macros = "2.3.0"

